--- a/Craigslist/Craigslist.css
+++ b/Craigslist/Craigslist.css
@@ -23,13 +23,13 @@ header {
 
 header #Search {
     padding-top: 2rem;
-    padding-left: 2rem;
+    padding-left: 1rem;
 }
 
 header input {
     position: absolute;
     top: 1.5rem;
-    left: 10rem;
+    left: 8rem;
     width: 75%;
     height: 3rem;
     padding: 0.3rem;
@@ -59,9 +59,11 @@ nav button {
     display: inline-block;
     /*   font-size: 16px; */
 }
-#hidden_accounts{
+
+#hidden_accounts {
     display: none;
 }
+
 #sidebar {
     background-color: #f6f8f5;
     padding: 0.3rem;
@@ -126,26 +128,40 @@ main section {
 }
 
 @media screen and (max-width: 1250px) {
-    nav{
+    nav {
+
         display: flex;
         flex-wrap: nowrap;
+        /* margin：0； */
+        /* padding: 0rem; */
     }
-    button{
-        font-size:16px;
+
+    button {
+        font-size: 16px;
     }
+
     #sidebar {
-       display: none; 
+        display: none;
     }
-    #hidden_accounts{
-        display:block;
+
+    #hidden_accounts {
+        display: block;
         position: absolute;
         top: 2rem;
         right: 1rem;
+        
+            width: 40px;
+            height: 40px;
+            background-color: #ccc;
+            border-radius: 50%;
+          
     }
-    header{
-        width:100vw;
+
+    header {
+        width: 100vw;
     }
-    main{
-        width:100vw;
+
+    main {
+        width: 100vw;
     }
 }
