--- a/NoMoreExpired/style.css
+++ b/NoMoreExpired/style.css
@@ -8,13 +8,17 @@
         font-size: 32px;
     }
 }
+p {
+    font-size:14px;
 
+ }
 body {
-    background-color: #E9E0C4;
+    background-color: #E0DCC9;
+    height:200vh;
     /* border-style: dashed; */
 }
 
-.header {
+header {
     /* border-style: dashed; */
     height: 5.5rem;
     margin-bottom: 2.5rem;
@@ -34,7 +38,7 @@ body {
     /* transition: 1s; */
 }
 
-.header div {
+header #top-left {
     height: 3rem;
 
     display: flex;
@@ -42,7 +46,30 @@ body {
 
     h1 {
         margin-left: 1rem;
-        color: #E9E0C4;
+        color: #E0DCC9;
+    }
+
+    #down {
+        position: absolute;
+        left: 5.7rem;
+        top: 3.9rem;
+    }
+
+    img {
+        margin-right: 1.2rem;
+        margin-left: 0.8rem;
+    }
+}
+
+header #top-right{
+    height: 3rem;
+
+    display: flex;
+    align-items: center;
+
+    h1 {
+        margin-left: 1rem;
+        color: #E0DCC9;
     }
 
     #down {
@@ -60,7 +87,7 @@ body {
 main {
     /* border-style: dashed; */
     position: relative;
-    top: 6rem;
+    top: 2rem;
     padding-bottom: 0.5rem;
     width: 100vw;
     overflow-y: scroll;
@@ -77,57 +104,57 @@ main::-webkit-scrollbar {
 }
 
 .timeline-content {
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.8rem;
     position: relative;
     display: flex;
 }
 
-.timeline-content:first-child {
+#today {
     .medi {
-        border-color: #724747;
-        background-color: #724747;
+        border-color: #5F130C;
+        background-color: #5F130C;
         border-width: 4px 5px;
         border-style: solid;
         border-radius: 1rem;
 
         h3 {
-            color: #E9E0C4;
+            color: #E0DCC9;
         }
 
         p {
-            color: #E9E0C4;
+            color: #E0DCC9;
         }
     }
 
     .food {
-        border-color: #4F6042;
-        background-color: #4F6042;
+        border-color: #125649;
+        background-color: #125649;
         border-width: 4px 5px;
         border-style: solid;
         border-radius: 1rem;
 
         h3 {
-            color: #E9E0C4;
+            color: #E0DCC9;
         }
 
         p {
-            color: #E9E0C4;
+            color: #E0DCC9;
         }
     }
 
     .doc {
-        border-color: #547377;
-        background-color: #547377;
+        border-color: #235B6D;
+        background-color: #235B6D;
         border-width: 4px 5px;
         border-style: solid;
         border-radius: 1rem;
 
         h3 {
-            color: #E9E0C4;
+            color: #E0DCC9;
         }
 
         p {
-            color: #E9E0C4;
+            color: #E0DCC9;
         }
     }
 
@@ -148,12 +175,12 @@ main::-webkit-scrollbar {
 
     width: calc(100vw - 10rem);
     padding: 1rem;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
+    padding-top: 0.3rem;
+    padding-bottom: 0.3rem;
 }
 
 .food {
-    border-color: #4F6042;
+    border-color: #125649;
     border-width: 4px 5px;
     border-style: solid;
     border-radius: 1rem;
@@ -161,14 +188,14 @@ main::-webkit-scrollbar {
 }
 
 .doc {
-    border-color: #547377;
+    border-color: #235B6D;
     border-width: 4px 5px;
     border-style: solid;
     border-radius: 1rem;
 }
 
 .medi {
-    border-color: #724747;
+    border-color: #5F130C;
     border-width: 4px 5px;
     border-style: solid;
     border-radius: 1rem;
@@ -179,7 +206,7 @@ main::-webkit-scrollbar {
     position: relative;
     margin-left: 2rem;
     margin-right: 2rem;
-    margin-top: 0.5rem;
+    margin-top: 0.2rem;
     width: 2rem;
     display: flex;
     flex-direction: column;
@@ -204,7 +231,7 @@ main::-webkit-scrollbar {
     border-color: #3D3629;
     border-style: solid;
     border-radius: 2rem;
-    color: #E9E0C4;
+    color: #E0DCC9;
 }
 
 .month {
@@ -239,31 +266,38 @@ menu {
 }
 
 .month-calendar{
-    display: grid;
+    display: none;
     position: absolute;
     top: 5.5rem;
-    left: 0;
+
     width: calc(100vw - 1rem);
-    padding: 0 0.5rem;
+    padding: 0 0.5rem ;
     z-index: 500;
     background-color: #3D3629;
 
     div {
-        color: #E9E0C4;
-        padding: 1rem;
+        color: #E0DCC9;
+        margin:0 auto 1rem auto;
+        padding: 0;
+        background-color: #3D3629;
     }
 
     grid-template-columns: repeat(7, 1fr);
     text-align: center;
     grid-gap: 0 0.5rem;
 }
-
-.hidden {
-    display: none;
-}
+    #top-left:hover{
+        .month-calendar{
+            display:grid;
+        }
+    }
 
 @media (min-width: 600px) {
-    .header {
+    body{
+        margin:0 auto;
+        width:600px;
+    }
+    header {
         width: 600px;
     }
 
@@ -282,4 +316,6 @@ menu {
     .month-calendar {
         width: calc(600px - 1rem);
     }
+
+
 }
